Small change in Quotium case, change its name to CyberQuantic

--- a/_pages/case-study/cyberquantic/cyberquantic.html
+++ b/_pages/case-study/cyberquantic/cyberquantic.html
@@ -1,9 +1,9 @@
 ---
 title: "How to turn an idea into a lead-generation website | Implex"
-description: "See how we transformed Quotium's innovative vision into a novel mental-map-based website, integrated with Airtable to be a successful lead-generation machine"
-ogDescription: "See how we transformed Quotium's innovative vision into a novel mental-map-based website, integrated with Airtable to be a successful lead-generation machine"
-ogImage: "/assets/img/case-study/quotium/og-image-case-study_Quotium-1200.png"
-permalink: /case-study/quotium
+description: "See how we transformed CyberQuantic's innovative vision into a novel mental-map-based website, integrated with Airtable to be a successful lead-generation machine"
+ogDescription: "See how we transformed CyberQuantic's innovative vision into a novel mental-map-based website, integrated with Airtable to be a successful lead-generation machine"
+ogImage: "/assets/img/case-study/cyberquantic/og-image-case-study_CyberQuantic-1200.png"
+permalink: /case-study/cyberquantic
 canonicalLink: ""
 layout: default-static-header
 showSlider: true
@@ -17,21 +17,19 @@ keywords: ''
   ~ All rights reserved
   -->
 {% endcomment %}
-<div class="case-study quotium">
+<div class="case-study cyberquantic">
   <section>
     <div class="content">
       <h1 class="main-title">Turning unusual vision into a novel map-based web product</h1>
       <div class="col-2 margin-top">
         <div class="column-wrapper big remove-margin ">
-          <div class="image" id="image1" style="background-image: url('/assets/img/case-study/quotium/1-Quotium-client-1280.webp')"></div>
+          <div class="image" id="image1" style="background-image: url('/assets/img/case-study/cyberquantic/1-CyberQuantic-client-1280.webp')"></div>
         </div>
         <div class="column-wrapper column-content huge remove-margin">
           <h2>Client</h2>
-          <div><strong><a class="content-link" href="https://cyberquantic.com/" target="_blank" rel="noopener noreferrer nofollow">Quotium</a></strong> is a consulting company that offers solutions to manage business processes automation, performance, and security. It is specializing in artificial intelligence with projects focused on machine learning, natural language processing, computer vision, and more. Since 2222, the company has completed over 200 projects for more than 100 clients worldwide.</div>
+          <div><strong><a class="content-link" href="https://cyberquantic.com/" target="_blank" rel="noopener noreferrer nofollow">CyberQuantic</a></strong> is a consulting company that offers solutions to manage business processes automation, performance, and security. It is specializing in artificial intelligence with projects focused on machine learning, natural language processing, computer vision, and more. Since 2018, the company has completed over 50 projects for more than 35 clients worldwide.</div>
           <br />
           <div>Additionally, the company has a large knowledge base of use cases for artificial intelligence projects to help clients solve problems and offer ideas based on completed projects by their competitors.</div>
-          <br />
-          <div>Quotium is recognized by Gartner and Forrester for its innovations. </div>
           <br />
           <div><strong>Industry</strong>: AI Consulting</div>
           <div><strong>Location</strong>: France</div>
@@ -49,13 +47,13 @@ keywords: ''
           </div>
           <br />
           <div>
-            <strong>Quotium</strong> has decided to take a non-standard approach, with its website focusing on what clients are searching for, rather than on the company and its specialties. The goal is for the client to feel like the main actor on the website, and to find solutions for their needs, whether it be to improve business efficiency, enhance their processes, or advance their knowledge in artificial intelligence.
+            <strong>CyberQuantic</strong> has decided to take a non-standard approach, with its website focusing on what clients are searching for, rather than on the company and its specialties. The goal is for the client to feel like the main actor on the website, and to find solutions for their needs, whether it be to improve business efficiency, enhance their processes, or advance their knowledge in artificial intelligence.
           </div>
           <br />
-          <div>Not only did we have to implement an intuitively understandable design, but to integrate with Quotium's knowledge base while maintaining a high level of website performance without skyrocketing costs.</div>
+          <div>Not only did we have to implement an intuitively understandable design, but to integrate with CyberQuantic's knowledge base while maintaining a high level of website performance without skyrocketing costs.</div>
         </div>
         <div class="column-wrapper center-content huge remove-margin">
-          <div class="image" id="image2" style="background-image: url('/assets/img/case-study/quotium/2-Quotium-macbook-1280.webp'); background-size: contain;"></div>
+          <div class="image" id="image2" style="background-image: url('/assets/img/case-study/cyberquantic/2-CyberQuantic-macbook-1280.webp'); background-size: contain;"></div>
         </div>
       </div>
     </div>
@@ -63,18 +61,18 @@ keywords: ''
   <section class="section-black">
     <div class="content">
       {% include quote/quote.html
-        avatarUrl="/assets/img/case-study/quotium/Elsane-Guglielmino-200.webp"
+        avatarUrl="/assets/img/case-study/cyberquantic/Elsane-Guglielmino-200.webp"
         authorName="Elsane Guglielmino"
-        authorPosition="CEO Quotium Technologies - Business Angel"
+        authorPosition="CEO Quotium Technologies/CyberQuantic - Business Angel"
         authorUrl="https://www.linkedin.com/in/elsane/"
-        content="\"Here should be your 5-stars feedback :-))).Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget placerat mi. Morbi erat dolor, facilisis et viverra et, maximus vitae tortor. Cras iaculis purus risus, in euismod nunc fringilla vel. Maecenas quis rutrum lectus.\""
+        content="\"Implex's remarkable dedication and proficiency in problem-solving stood out in our collaboration. Their expertise shone through not only in their stellar design and user experience proposals but also in their highly professional project management skills. Implex ensured transparency and control over the project's progression by utilizing weekly deliverables and meetings effectively. Their punctual communication style complemented their overall professional competence, making the entire collaboration smooth and successful.\""
       %}
     </div>
   </section>
   <section>
     <div class="content">
       <h2>Solution</h2>
-      <div class="text-center sub-heading">Since the main idea was to make mental maps the primary content and navigation method for the website, we started our work with Quotium from the ideation stage, during which we focused on mental maps. The design uses hexagons to efficiently navigate concepts and use cases to present information and data structures in an easy-to-read and understandable way.</div>
+      <div class="text-center sub-heading">Since the main idea was to make mental maps the primary content and navigation method for the website, we started our work with CyberQuantic from the ideation stage, during which we focused on mental maps. The design uses hexagons to efficiently navigate concepts and use cases to present information and data structures in an easy-to-read and understandable way.</div>
 <!--      <div class="col-2 margin-top">-->
       <div class="col-2">
         <div class="column-content">
@@ -88,7 +86,7 @@ keywords: ''
           <div>
             To ensure high website performance, the decision was made to use Next.js — a framework based on React that allows the creation of web applications with improved performance and user experience through additional features of pre-rendering, such as full server-side rendering (SSR) and static page generation (SSG).</div>
           <br />
-          <div>To smoothly integrate with current Quotium’s business processes, we integrated the site with their Airtable DB and used its API for searching and reading data. The solution allows potential customers and partners to conveniently leave context-dependent requests to Quotium, implementing an effective lead generation machine defended by react-google-Recaptcha.</div>
+          <div>To smoothly integrate with current CyberQuantic’s business processes, we integrated the site with their Airtable DB and used its API for searching and reading data. The solution allows potential customers and partners to conveniently leave context-dependent requests to CyberQuantic, implementing an effective lead generation machine defended by react-google-Recaptcha.</div>
         </div>
       </div>
       <h3 class="text-center technologies">The tools and technologies we used were:</h3>
@@ -110,7 +108,7 @@ keywords: ''
     <div class="content">
       <div class="col-2">
         <div class="column-wrapper center-content">
-          <div class="image" style="background-image: url('/assets/img/case-study/quotium/3-Quotium-phone-hand-1280.webp')"></div>
+          <div class="image" style="background-image: url('/assets/img/case-study/cyberquantic/3-CyberQuantic-phone-hand-1280.webp')"></div>
         </div>
         <div class="column-wrapper big remove-padding">
           <div class="column-content">
